SERVER-29296 Fix warning in key_string.cpp